# weston

./: meson.build  meson_options.txt
clients/: meson.build  rdprail-shell.c
desktop-shell/: input-panel.c  meson.build  shell.c  shell.h
desktop-shell/rdprail/: app-list.c  meson.build  rdprail.h
frontend/: main.c  meson.build  rdpdisp.c  weston.h
include/libweston/: backend-rdp.h  desktop.h  libweston.h  shell-utils.h  xwayland-api.h
ivi-shell/: ivi-layout.c
libweston/: compositor.c  input.c  libweston-internal.h  pixman-renderer.c  timeline.c  timeline.h
libweston/backend-rdp/: meson.build  rdp.c  rdp.h  rdpclip.c  rdpdisp.c  rdprail.c  rdputil.c
libweston/desktop/: internal.h  libweston-desktop.c  xwayland.c
libweston/renderer-gl/: gl-renderer.c
libweston/shell-utils/: shell-utils.c
protocol/: meson.build
rdprail-shell/: app-list.c  img-load.c  input-panel.c  meson.build  shell.c
shared/: image-loader.c  meson.build  xalloc.h  xcb-xwayland.h
tests/: surface-screenshot-test.c
xwayland/: launcher.c  selection.c  window-manager.c  xwayland-internal-interface.h
